# calibre-kobo-companion

./: .gitignore  AGENTS.md  LICENSE.md  README.md  pyproject.toml
docs/: acme-sh-certificates.md  installation.md  kobo-setup.md  project-plan.md
src/calibre_kobo_companion/: __init__.py  calibre.py  cli.py  config.py  db.py  kepub.py  kobo.py  kobo_proxy.py  server.py
tests/: calibre_fixture.py  test_calibre_fixture.py  test_calibre_library.py  test_cli.py  test_config.py  test_db.py  test_kepub.py  test_kobo_proxy.py  test_server.py
