[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "calibre-kobo-companion"
version = "0.1.0"
description = "Headless read-only Kobo access for an existing Calibre library"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Calibre Kobo Companion contributors" }
]
dependencies = []

[project.scripts]
calibre-kobo-companion = "calibre_kobo_companion.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
